--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
            <h1>I'm Prakhar</h1>
             <p class="top">a programmer.</p>
-         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+<!--          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img"> -->
 
   </div>
 
