--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skill-row">
           <img class="c-pic" src="images/creative-mind.png" alt="idea-img">
           <h3 >c , c++ , Data structure.</h3>
-          <p class=>Doing code is really vere Intresting and I am gaining experience in solving problems.</p>
+          <p class=>Doing code is really very Intresting and I am gaining experience in solving problems.</p>
         </div>
   </div>
 
